# orc-horde

./: #design.org#  .#design.org  .gitignore  CMakeLists.txt  build.ps1  build.sh  cloc_log  compile_shaders.ps1  compile_shaders.sh  design.org  design.tex  readme
models/bullet/: bullet.blend  bullet.mtl
models/explosion/: explosion_regular.blend  explosion_regular.mtl  explosion_super.blend  explosion_super.mtl
models/human_low_poly/: human_low_poly.blend  human_low_poly.mtl
models/orc_low_poly/: orc_low_poly.blend  orc_low_poly.mtl
shaders/: base.frag  base.vert  triangle.frag  triangle.frag~  triangle.vert  triangle.vert~
src/: #renderer.h#  animation.cpp  asset.hh  bullet.cpp  containers.hh  decorator.cpp  game.hh  game_object.hh  human.cpp  main.cpp  main.cpp~  math.hh  orc.cpp  render.cpp~  renderer.hh  renderer.hh~  rigid_body.cpp  vulkan_asset.cpp  vulkan_asset_store.cpp  vulkan_mesh.cpp  vulkan_renderer.cpp  vulkan_renderer.cpp~  vulkan_texture.cpp
